--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -9,4 +9,23 @@
             {{ wtf.quick_form(form) }}
         </div>
     </div>
+
+    <!-- <div class="row">
+        <div class="col-md-4">
+    <form class="form form-horizontal" method="post" role="form">
+        {{ form.hidden_tag() }}
+        {{ wtf.form_errors(form) }}
+      
+        {{ wtf.form_field(form.username) }}
+        {{ wtf.form_field(form.email) }}
+        {% for error in form.email.errors %}
+        <div class="alert alert-danger" role="alert">{{ error }}</div>
+        {% endfor %}
+        {{ wtf.form_field(form.password) }}
+        {{ wtf.form_field(form.password2) }}
+        {{ wtf.form_field(form.submit) }}
+      </form>
+        </div>
+    </div> -->
+      
 {% endblock %}
