--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,34 +21,32 @@
 
 {% block navbar %}
 
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-    <a class="navbar-brand" href="#">WineCellar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="{{ url_for('main.index') }}">Home <span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+  <a class="navbar-brand" href="{{ url_for('main.index') }}">WineCellar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    
-
-    </div>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item {{wines_active_status}}">
+        <a class="nav-link" href="{{ url_for('wine.index') }}">Wines <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item {{recipes_active_status}}">
+        <a class="nav-link" href="#">Recipes</a>
+      </li>
+    </ul>
     <ul class="nav navbar-nav navbar-right">
-        {% if current_user.is_anonymous %}
-        <li><a href="{{ url_for('auth.login') }}">Login</a></li>
-        {% else %}
-        <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
-        {% endif %}
-    </ul>   
-
-    </div>
-  </nav> 
- 
-
+      {% if current_user.is_anonymous %}
+      <li><a href="{{ url_for('auth.login') }}">Login</a></li>
+      {% else %}
+      <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
+      {% endif %}
+    </ul>  
+  </div>
+</div>
+</nav>
 
 {% endblock %}
 
