--- a/app/templates/wine/_wine.html
+++ b/app/templates/wine/_wine.html
@@ -1,5 +1,5 @@
 <div class="table-responsive">
-<table class="table table-hover table-borderless" >
+<table class="table table-hover table-borderless card" >
     <tbody>
     <tr class="" href="#">
         <td class="col-12">
