--- a/app/templates/wine/index.html
+++ b/app/templates/wine/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% import 'bootstrap/wtf.html' as wtf %}
+{% import 'form_macros.html' as fm %}
 
 {% block app_content %}
 <div class="p-4 p-md-5 mb-4 text-white rounded bg-danger">
@@ -8,11 +8,21 @@
     </div>
 </div>
 
-
     {% if form %}
-    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#addwine">+</button>
+    <button type="button" class="btn btn-info" data-bs-toggle="collapse" data-bs-target="#addwine">+</button>
     <div id="addwine" class="collapse">
-        {{ wtf.quick_form(form) }}
+        </br>
+        <div class="row">
+            <div class="col-md-4">
+                <form method="post" enctype="multipart/form-data">
+                    {{ form.hidden_tag() }}
+                    {{ fm.input(form.description) }}
+                    {{ fm.input(form.rating, class="form-select") }}
+                    {{ fm.input(form.image) }}
+                    {{ form.submit(class="btn btn-primary") }}
+                </form>
+            </div>
+        </div>
     </div>
     {% endif %}
     </br>   
