--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,26 +1,23 @@
-{% extends 'bootstrap/base.html' %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
-{% block title %}
-   WineCellar
-{% endblock %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-{% block head %}
-{{super()}}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-{% endblock %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
-{% block styles %}
-{{super()}}
-<style>
-  .checked {
-    color: orange;
-  }
-</style>
-{% endblock %}
+    <title>WineCellar</title>
+
+    <style>
+        .checked {
+            color: orange;
+        }
+    </style>
 
 
-{% block navbar %}
-
+</head>
+<body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
   <a class="navbar-brand" href="{{ url_for('main.index') }}">WineCellar</a>
@@ -37,30 +34,29 @@
         <a class="nav-link" href="#">Recipes</a>
       </li>
     </ul>
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav ms-auto">
       {% if current_user.is_anonymous %}
       <li><a href="{{ url_for('auth.login') }}">Login</a></li>
       {% else %}
       <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
       {% endif %}
-    </ul>  
+    </ul>
   </div>
 </div>
 </nav>
 
-{% endblock %}
 
-{% block content %}
-    <div class="container">
-        {% with messages = get_flashed_messages(with_categories=true) %}
+<div class="container">
+    {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             {% for category, message in messages %}
-              <div class="alert {{category}}" role="alert">{{ message }}</div>
+                <div class="alert {{ category }}" role="alert">{{ message }}</div>
             {% endfor %}
         {% endif %}
-        {% endwith %}
+    {% endwith %}
 
-        {# application content needs to be provided in the app_content block #}
-        {% block app_content %}{% endblock %}
-    </div>
-{% endblock %}
+    {# application content needs to be provided in the app_content block #}
+    {% block app_content %}{% endblock %}
+</div>
+</body>
+</html>
